Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "'Pha giao cầu giành HC vàng của Việt Nam không chỉ là may mắn'",
+    "content": "Cú giao cầu quyết định của Trần Thị Ngọc Yến trong trận chung kết World Cup cầu mây không chỉ là may mắn, mà còn là kết quả của quá trình rèn luyện và chiến thuật hợp lý. HLV Trần Thị Vui nhấn mạnh rằng áp lực trong tình huống này rất cao, và cú giao cầu thành công đã được chuẩn bị kỹ lưỡng. Đội cầu mây nữ Việt Nam đã xuất sắc vượt qua Thái Lan để giành chức vô địch, đánh dấu lần đầu tiên họ đoạt HC vàng tại giải đấu này.",
+    "link": "https://vnexpress.net/pha-giao-cau-gianh-hc-vang-cua-viet-nam-khong-chi-la-may-man-4864638.html",
+    "cat": "the-thao",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Cú giao cầu quyết định của Ngọc Yến có phải chỉ là may mắn không?",
+    "answers": [
+      {
+        "text": "Không, đó là kết quả của sự chuẩn bị và kỹ năng.",
+        "correct": true
+      },
+      {
+        "text": "Có, hoàn toàn là may mắn.",
+        "correct": false
+      },
+      {
+        "text": "Không, nhưng phần lớn là may mắn.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng cũng có yếu tố kỹ thuật.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hạn sớm, Tây Nguyên tất bật lo nước cho cây trái",
     "content": "Tình trạng hạn hán tại Tây Nguyên đang gây ra nhiều khó khăn cho nông dân, đặc biệt là đối với các loại cây trồng chủ lực như cà phê, hồ tiêu và sầu riêng. Nhiều nông dân đã phải đào ao trữ nước và khoan giếng để duy trì sản xuất trong bối cảnh thiếu nước trầm trọng. Giải pháp ứng dụng công nghệ tưới tiết kiệm và phát triển giống cây trồng chịu hạn được cho là cần thiết để bảo vệ nguồn nước và nâng cao năng suất cây trồng.",
     "link": "https://tuoitre.vn/han-som-tay-nguyen-tat-bat-lo-nuoc-cho-cay-trai-20250322233440658.htm",
@@ -197,6 +224,37 @@
       },
       {
         "text": "Nâng cấp hệ thống điện và nước",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Lầu Năm Góc cân nhắc phương án đổi tên Bộ Quốc phòng thành Bộ Chiến tranh",
+    "content": "Bộ trưởng Quốc phòng Mỹ Pete Hegseth đang xem xét khả năng đổi tên \"Bộ Quốc phòng\" thành \"Bộ Chiến tranh\". Ông đã tổ chức một cuộc thăm dò trên mạng xã hội để thu thập ý kiến của công chúng về đề xuất này, và hơn 50% người tham gia ủng hộ việc đổi tên. Cuộc thăm dò này đã gây ra nhiều tranh luận về việc tên gọi nào phản ánh đúng hơn về nhiệm vụ của cơ quan quân sự Mỹ.",
+    "link": "https://dantri.com.vn/the-gioi/lau-nam-goc-can-nhac-phuong-an-doi-ten-bo-quoc-phong-thanh-bo-chien-tranh-20250323072318715.htm",
+    "cat": "thoi-su",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Có phải Lầu Năm Góc đang cân nhắc đổi tên Bộ Quốc phòng thành Bộ Chiến tranh?",
+    "answers": [
+      {
+        "text": "Có",
+        "correct": true
+      },
+      {
+        "text": "Không",
+        "correct": false
+      },
+      {
+        "text": "Chưa rõ",
+        "correct": false
+      },
+      {
+        "text": "Đã thực hiện",
+        "correct": false
+      },
+      {
+        "text": "Chỉ là giả thuyết",
         "correct": false
       }
     ]
@@ -1571,33 +1629,6 @@
     ]
   },
   {
-    "title": "Thuốc đích, miễn dịch có thay hóa trị ung thư vú được không?",
-    "content": "Bài viết thảo luận về việc liệu liệu pháp thuốc đích và miễn dịch có thể thay thế hóa trị trong điều trị ung thư vú hay không. Theo bác sĩ, thuốc đích và liệu pháp miễn dịch là những phương pháp mới có thể giúp giảm tác dụng phụ so với hóa trị, nhưng chúng không thể hoàn toàn thay thế hóa trị. Việc điều trị sẽ phụ thuộc vào đặc điểm sinh học của từng bệnh nhân và tình trạng bệnh. Tùy thuộc vào từng trường hợp cụ thể, bác sĩ sẽ quyết định phương pháp phù hợp để tối ưu hiệu quả điều trị.",
-    "link": "https://vnexpress.net/thuoc-dich-mien-dich-co-thay-hoa-tri-ung-thu-vu-duoc-khong-4864508.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Liệu pháp thuốc đích và miễn dịch có thể thay thế hóa trị trong điều trị ung thư vú không?",
-    "answers": [
-      {
-        "text": "Không hoàn toàn thay thế",
-        "correct": true
-      },
-      {
-        "text": "Có thể thay thế hoàn toàn",
-        "correct": false
-      },
-      {
-        "text": "Chỉ dùng cho giai đoạn cuối",
-        "correct": false
-      },
-      {
-        "text": "Không áp dụng cho mọi bệnh nhân",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Sinh con đầu lòng ở tuổi 54",
     "content": "Một người phụ nữ 54 tuổi, mắc bệnh lạc nội mạc và có tử cung xơ hóa hoàn toàn, đã mang thai thành công nhờ thụ tinh ống nghiệm (IVF). Tuy nhiên, thai kỳ của bà gặp nhiều biến chứng, dẫn đến ca sinh mổ khó khăn. Các bác sĩ đã phải can thiệp phẫu thuật sâu để đưa em bé ra, và cuối cùng, một bé trai nặng 2,1 kg đã chào đời khỏe mạnh. Hiện tại, sức khỏe của cả mẹ và con đều ổn định, được xem là một kỳ tích trong y học.",
     "link": "https://vnexpress.net/sinh-con-dau-long-o-tuoi-54-4864546.html",
@@ -1620,6 +1651,33 @@
       },
       {
         "text": "Bằng cách nhận con nuôi",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Thuốc đích, miễn dịch có thay hóa trị ung thư vú được không?",
+    "content": "Bài viết thảo luận về việc liệu liệu pháp thuốc đích và miễn dịch có thể thay thế hóa trị trong điều trị ung thư vú hay không. Theo bác sĩ, thuốc đích và liệu pháp miễn dịch là những phương pháp mới có thể giúp giảm tác dụng phụ so với hóa trị, nhưng chúng không thể hoàn toàn thay thế hóa trị. Việc điều trị sẽ phụ thuộc vào đặc điểm sinh học của từng bệnh nhân và tình trạng bệnh. Tùy thuộc vào từng trường hợp cụ thể, bác sĩ sẽ quyết định phương pháp phù hợp để tối ưu hiệu quả điều trị.",
+    "link": "https://vnexpress.net/thuoc-dich-mien-dich-co-thay-hoa-tri-ung-thu-vu-duoc-khong-4864508.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Liệu pháp thuốc đích và miễn dịch có thể thay thế hóa trị trong điều trị ung thư vú không?",
+    "answers": [
+      {
+        "text": "Không hoàn toàn thay thế",
+        "correct": true
+      },
+      {
+        "text": "Có thể thay thế hoàn toàn",
+        "correct": false
+      },
+      {
+        "text": "Chỉ dùng cho giai đoạn cuối",
+        "correct": false
+      },
+      {
+        "text": "Không áp dụng cho mọi bệnh nhân",
         "correct": false
       }
     ]
@@ -2116,6 +2174,33 @@
     ]
   },
   {
+    "title": "Bị suy thận có thể chơi pickleball không?",
+    "content": "Người bị suy thận mạn giai đoạn hai như bạn cần thận trọng khi tham gia các hoạt động thể thao như pickleball. Mặc dù môn này có nhiều lợi ích cho sức khỏe, nhưng cũng đi kèm với nguy cơ chấn thương cao. Trước khi tiếp tục chơi, bạn nên tham khảo ý kiến bác sĩ để đảm bảo an toàn cho sức khỏe của mình.",
+    "link": "https://vnexpress.net/bi-suy-than-co-the-choi-pickleball-khong-4864511.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Người bị suy thận có thể tiếp tục chơi pickleball không?",
+    "answers": [
+      {
+        "text": "Nên tham khảo ý kiến bác sĩ trước khi chơi.",
+        "correct": true
+      },
+      {
+        "text": "Có thể chơi mà không cần lo lắng gì.",
+        "correct": false
+      },
+      {
+        "text": "Chơi bình thường như trước đây.",
+        "correct": false
+      },
+      {
+        "text": "Không nên chơi bất kỳ môn thể thao nào.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Cặp đôi đồng tính muốn có con nên làm gì?",
     "content": "Cặp đôi đồng tính có thể có con thông qua các phương pháp hỗ trợ sinh sản hiện đại như thụ tinh nhân tạo (IUI) và thụ tinh trong ống nghiệm (IVF). Những cặp đồng tính nữ có thể xin tinh trùng từ ngân hàng và thực hiện IUI, trong khi cặp đồng tính nam có thể phải chờ đợi các quy định pháp luật cho phép mang thai hộ. Bài viết cũng nhấn mạnh tầm quan trọng của việc tư vấn tâm lý cho bệnh nhân trong quá trình điều trị IVF.",
     "link": "https://vnexpress.net/cap-doi-dong-tinh-muon-co-con-nen-lam-gi-4864488.html",
@@ -2142,33 +2227,6 @@
       },
       {
         "text": "Chờ đợi pháp luật cho phép mang thai hộ",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bị suy thận có thể chơi pickleball không?",
-    "content": "Người bị suy thận mạn giai đoạn hai như bạn cần thận trọng khi tham gia các hoạt động thể thao như pickleball. Mặc dù môn này có nhiều lợi ích cho sức khỏe, nhưng cũng đi kèm với nguy cơ chấn thương cao. Trước khi tiếp tục chơi, bạn nên tham khảo ý kiến bác sĩ để đảm bảo an toàn cho sức khỏe của mình.",
-    "link": "https://vnexpress.net/bi-suy-than-co-the-choi-pickleball-khong-4864511.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Người bị suy thận có thể tiếp tục chơi pickleball không?",
-    "answers": [
-      {
-        "text": "Nên tham khảo ý kiến bác sĩ trước khi chơi.",
-        "correct": true
-      },
-      {
-        "text": "Có thể chơi mà không cần lo lắng gì.",
-        "correct": false
-      },
-      {
-        "text": "Chơi bình thường như trước đây.",
-        "correct": false
-      },
-      {
-        "text": "Không nên chơi bất kỳ môn thể thao nào.",
         "correct": false
       }
     ]
@@ -3082,6 +3140,33 @@
     ]
   },
   {
+    "title": "Cộng đồng mạng phát sốt với bài toán chỉ toàn phép cộng mà gây \"xoắn não\"",
+    "content": "Bài toán đang gây sốt trên mạng xã hội yêu cầu người chơi phải nhận diện quy luật từ một chuỗi số có vẻ như là phép cộng nhưng thực tế lại ẩn chứa nhiều bất ngờ. Đề bài đưa ra bốn phép cộng, trong đó ba kết quả đã cho là sai theo quy tắc toán học truyền thống. Để giải được bài toán, người tham gia cần phát hiện quy luật rằng các kết quả là số đảo ngược của tổng hai số ở phía bên trái dấu '='. Kết quả cuối cùng của phép cộng thứ tư là 13.",
+    "link": "https://dantri.com.vn/giao-duc/cong-dong-mang-phat-sot-voi-bai-toan-chi-toan-phep-cong-ma-gay-xoan-nao-20250320113006716.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 5,
+    "question": "Bài toán gây sốt trên mạng xã hội yêu cầu người chơi tìm quy luật gì?",
+    "answers": [
+      {
+        "text": "Các số đảo ngược kết quả phép cộng",
+        "correct": true
+      },
+      {
+        "text": "Kết quả là tổng các số bên trái",
+        "correct": false
+      },
+      {
+        "text": "Kết quả là số lớn nhất trong dãy",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần cộng các số lại với nhau",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đặt stent sau bao lâu thì ổn định?",
     "content": "Sau khi đặt stent mạch vành, bệnh nhân thường cần nằm viện từ 2-3 ngày để theo dõi sức khỏe. Thời gian hồi phục có thể khoảng một tuần đối với trường hợp không khẩn cấp, nhưng nếu cần đặt stent ngay lập tức do nhồi máu cơ tim, có thể mất vài tuần đến hơn một tháng để bình phục hoàn toàn. Bệnh nhân cần tuân thủ chế độ dinh dưỡng và tránh hoạt động nặng để hồi phục nhanh chóng.",
     "link": "https://vnexpress.net/dat-stent-sau-bao-lau-thi-on-dinh-4864401.html",
@@ -3108,33 +3193,6 @@
       },
       {
         "text": "3 tháng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cộng đồng mạng phát sốt với bài toán chỉ toàn phép cộng mà gây \"xoắn não\"",
-    "content": "Bài toán đang gây sốt trên mạng xã hội yêu cầu người chơi phải nhận diện quy luật từ một chuỗi số có vẻ như là phép cộng nhưng thực tế lại ẩn chứa nhiều bất ngờ. Đề bài đưa ra bốn phép cộng, trong đó ba kết quả đã cho là sai theo quy tắc toán học truyền thống. Để giải được bài toán, người tham gia cần phát hiện quy luật rằng các kết quả là số đảo ngược của tổng hai số ở phía bên trái dấu '='. Kết quả cuối cùng của phép cộng thứ tư là 13.",
-    "link": "https://dantri.com.vn/giao-duc/cong-dong-mang-phat-sot-voi-bai-toan-chi-toan-phep-cong-ma-gay-xoan-nao-20250320113006716.htm",
-    "cat": "giao-duc",
-    "positivity": 8,
-    "importance": 5,
-    "question": "Bài toán gây sốt trên mạng xã hội yêu cầu người chơi tìm quy luật gì?",
-    "answers": [
-      {
-        "text": "Các số đảo ngược kết quả phép cộng",
-        "correct": true
-      },
-      {
-        "text": "Kết quả là tổng các số bên trái",
-        "correct": false
-      },
-      {
-        "text": "Kết quả là số lớn nhất trong dãy",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cần cộng các số lại với nhau",
         "correct": false
       }
     ]
@@ -3587,33 +3645,6 @@
       },
       {
         "text": "Nio ET9 không có công nghệ tiên tiến.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Viêm xoang có di truyền không?",
-    "content": "Viêm xoang không phải là bệnh di truyền, nhưng một số yếu tố di truyền có thể làm tăng nguy cơ mắc bệnh. Các biến thể trong gene như TAS2R38 và ALOX15 có thể ảnh hưởng đến khả năng bảo vệ của xoang mũi và dẫn đến viêm xoang. Mặc dù không di truyền, nhưng môi trường sống và thói quen sinh hoạt của gia đình cũng có thể tạo điều kiện cho bệnh phát triển. Bệnh viêm xoang có thể được điều trị bằng nhiều phương pháp khác nhau, bao gồm thuốc và can thiệp y tế nếu cần.",
-    "link": "https://vnexpress.net/viem-xoang-co-di-truyen-khong-4864247.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Viêm xoang có di truyền không?",
-    "answers": [
-      {
-        "text": "Không, viêm xoang không di truyền nhưng có thể có yếu tố di truyền liên quan.",
-        "correct": true
-      },
-      {
-        "text": "Có, viêm xoang là bệnh di truyền từ cha mẹ sang con.",
-        "correct": false
-      },
-      {
-        "text": "Có thể di truyền trong một số trường hợp hiếm.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ ở những người sống trong cùng một môi trường.",
         "correct": false
       }
     ]
