Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,60 @@
     */
     const newsData = [
   {
+    "title": "Alvarez đòi sửa luật đá 11m",
+    "content": "Julian Alvarez, cầu thủ của Argentina, đã kêu gọi sửa luật đá phạt đền khi anh gặp sự cố trong trận đấu giữa Atletico và Real vào tháng 3. Trong tình huống đá luân lưu, Alvarez trượt chân và bị trọng tài không công nhận bàn thắng do cho rằng anh đã chạm bóng hai lần. Alvarez cho rằng luật này cần được làm rõ hơn và đề nghị không hủy đá phạt đền khi có lỗi nhỏ như vậy, vì điều này ảnh hưởng lớn đến kết quả trận đấu.",
+    "link": "https://vnexpress.net/alvarez-doi-sua-luat-da-11m-4864683.html",
+    "cat": "the-thao",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Tại sao Alvarez muốn sửa luật đá phạt đền?",
+    "answers": [
+      {
+        "text": "Vì anh cho rằng luật chạm bóng hai lần cần rõ ràng hơn.",
+        "correct": true
+      },
+      {
+        "text": "Vì anh muốn bảo vệ quyền lợi của cầu thủ.",
+        "correct": false
+      },
+      {
+        "text": "Vì anh không thích trọng tài.",
+        "correct": false
+      },
+      {
+        "text": "Vì anh muốn thay đổi cách tính điểm trong trận đấu.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Ronaldo: 'Hy vọng Hojlund sẽ thấy tôi mừng bàn trận tới'",
+    "content": "Cristiano Ronaldo đã bày tỏ sự không khó chịu khi Rasmus Højlund thực hiện màn chia vui 'Siu' sau khi ghi bàn cho Đan Mạch trong trận tứ kết Nations League với Bồ Đào Nha. Ronaldo khẳng định rằng Højlund không có ý chế giễu mà chỉ tôn vinh thần tượng của mình. Anh hy vọng trong trận lượt về, Højlund sẽ chứng kiến mình ăn mừng bàn thắng. Ronaldo cũng kêu gọi người hâm mộ đến sân cổ vũ để Bồ Đào Nha có thể ngược dòng thắng Đan Mạch.",
+    "link": "https://vnexpress.net/ronaldo-hy-vong-hojlund-se-thay-toi-mung-ban-tran-toi-4864686.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Ronaldo hy vọng điều gì trong trận lượt về với Đan Mạch?",
+    "answers": [
+      {
+        "text": "Hojlund sẽ thấy tôi mừng bàn",
+        "correct": true
+      },
+      {
+        "text": "Bồ Đào Nha sẽ thua trận",
+        "correct": false
+      },
+      {
+        "text": "Tôi không ghi bàn",
+        "correct": false
+      },
+      {
+        "text": "CĐV không đến cổ vũ",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Haaland giúp Na Uy ra quân đại thắng ở vòng loại World Cup",
     "content": "Erling Haaland cùng đội tuyển Na Uy đã có màn ra quân ấn tượng tại vòng loại World Cup 2026 khi đánh bại Moldova với tỷ số 5-0. Trong trận đấu, Haaland ghi một bàn thắng, giúp anh nâng kỷ lục lập công cho đội tuyển lên 39 bàn. Na Uy nổi bật với những pha tấn công mạnh mẽ, khiến đội chủ nhà Moldova gặp nhiều khó khăn trong việc phòng ngự. Trận thắng này đưa Na Uy lên dẫn đầu bảng I ngay sau lượt trận đầu tiên của bảng đấu.",
     "link": "https://vnexpress.net/haaland-giup-na-uy-ra-quan-dai-thang-o-vong-loai-world-cup-4864684.html",
@@ -502,6 +556,33 @@
     ]
   },
   {
+    "title": "Lợi ích khi ăn các loại hạt buổi sáng",
+    "content": "Ăn các loại hạt vào bữa sáng mang lại nhiều lợi ích cho sức khỏe như cung cấp chất dinh dưỡng, giảm nguy cơ mắc bệnh tim, hỗ trợ tiêu hóa và giúp kiểm soát cân nặng. Các loại hạt như hạt chia, óc chó và hạnh nhân rất giàu chất béo lành mạnh, protein và chất xơ, giúp duy trì năng lượng và cảm giác no lâu. Bữa sáng với các loại hạt còn cung cấp nhiều vitamin và khoáng chất cần thiết cho cơ thể, từ đó góp phần nâng cao sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/loi-ich-khi-an-cac-loai-hat-buoi-sang-4864646.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Lợi ích của việc ăn các loại hạt vào buổi sáng là gì?",
+    "answers": [
+      {
+        "text": "Giảm nguy cơ mắc bệnh tim và hỗ trợ tiêu hóa.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ cung cấp calo mà không có dinh dưỡng.",
+        "correct": false
+      },
+      {
+        "text": "Không có lợi ích gì cho sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Làm tăng cảm giác đói nhanh hơn.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nguyên nhân khiến trẻ nôn trớ",
     "content": "Trẻ sơ sinh dễ bị nôn trớ do hệ tiêu hóa chưa hoàn thiện, bú quá no hoặc một số bệnh lý đường tiêu hóa. Nôn trớ thường là tình trạng lành tính và có thể tự khỏi khi trẻ lớn hơn. Tuy nhiên, nếu tình trạng này kéo dài kèm theo các dấu hiệu bất thường như chậm tăng cân hay sốt cao, cha mẹ nên đưa trẻ đi khám. Nguyên nhân nôn trớ có thể bao gồm trào ngược dạ dày thực quản, dị ứng sữa hoặc nhiễm trùng tiêu hóa.",
     "link": "https://vnexpress.net/nguyen-nhan-khien-tre-non-tro-4864611.html",
@@ -528,33 +609,6 @@
       },
       {
         "text": "Do trẻ không ăn uống đầy đủ",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Lợi ích khi ăn các loại hạt buổi sáng",
-    "content": "Ăn các loại hạt vào bữa sáng mang lại nhiều lợi ích cho sức khỏe như cung cấp chất dinh dưỡng, giảm nguy cơ mắc bệnh tim, hỗ trợ tiêu hóa và giúp kiểm soát cân nặng. Các loại hạt như hạt chia, óc chó và hạnh nhân rất giàu chất béo lành mạnh, protein và chất xơ, giúp duy trì năng lượng và cảm giác no lâu. Bữa sáng với các loại hạt còn cung cấp nhiều vitamin và khoáng chất cần thiết cho cơ thể, từ đó góp phần nâng cao sức khỏe tổng thể.",
-    "link": "https://vnexpress.net/loi-ich-khi-an-cac-loai-hat-buoi-sang-4864646.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Lợi ích của việc ăn các loại hạt vào buổi sáng là gì?",
-    "answers": [
-      {
-        "text": "Giảm nguy cơ mắc bệnh tim và hỗ trợ tiêu hóa.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ cung cấp calo mà không có dinh dưỡng.",
-        "correct": false
-      },
-      {
-        "text": "Không có lợi ích gì cho sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Làm tăng cảm giác đói nhanh hơn.",
         "correct": false
       }
     ]
@@ -1805,37 +1859,6 @@
     ]
   },
   {
-    "title": "Ho ra máu cảnh báo bệnh gì?",
-    "content": "Ho ra máu có thể là dấu hiệu của nhiều bệnh lý nghiêm trọng như ung thư phổi, lao phổi, và bệnh phổi tắc nghẽn mạn tính. Các nguyên nhân khác bao gồm viêm phế quản, tổn thương đường hô hấp, và các tình trạng viêm tự miễn. Nếu ho ra máu kéo dài hoặc kèm theo triệu chứng nghiêm trọng như đau ngực hay sút cân, người bệnh nên đi khám ngay. Để phòng ngừa, cần điều trị sớm các bệnh viêm nhiễm đường hô hấp và bỏ thuốc lá.",
-    "link": "https://vnexpress.net/ho-ra-mau-canh-bao-benh-gi-4860525.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Ho ra máu có thể cảnh báo bệnh gì nguy hiểm?",
-    "answers": [
-      {
-        "text": "Ung thư phổi",
-        "correct": true
-      },
-      {
-        "text": "Cảm cúm",
-        "correct": false
-      },
-      {
-        "text": "Viêm họng",
-        "correct": false
-      },
-      {
-        "text": "Cao huyết áp",
-        "correct": false
-      },
-      {
-        "text": "Đau dạ dày",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bị liệt dây thần kinh số 7 nên ăn gì?",
     "content": "Bị liệt dây thần kinh số 7, người bệnh cần bổ sung thực phẩm giàu dinh dưỡng để hỗ trợ phục hồi. Các loại thực phẩm như thịt nạc, cá béo, ngũ cốc nguyên hạt và các loại đậu giàu omega-3 rất có lợi cho sức khỏe. Ngoài ra, các loại trái cây và rau xanh cung cấp chất chống oxy hóa, vitamin và khoáng chất thiết yếu, giúp tăng cường hệ miễn dịch và chức năng thần kinh. Uống đủ nước và duy trì chế độ ăn uống lành mạnh cũng rất quan trọng.",
     "link": "https://vnexpress.net/bi-liet-day-than-kinh-so-7-nen-an-gi-4864560.html",
@@ -1920,6 +1943,37 @@
       },
       {
         "text": "Chỉ nếu có vết thương sâu.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Ho ra máu cảnh báo bệnh gì?",
+    "content": "Ho ra máu có thể là dấu hiệu của nhiều bệnh lý nghiêm trọng như ung thư phổi, lao phổi, và bệnh phổi tắc nghẽn mạn tính. Các nguyên nhân khác bao gồm viêm phế quản, tổn thương đường hô hấp, và các tình trạng viêm tự miễn. Nếu ho ra máu kéo dài hoặc kèm theo triệu chứng nghiêm trọng như đau ngực hay sút cân, người bệnh nên đi khám ngay. Để phòng ngừa, cần điều trị sớm các bệnh viêm nhiễm đường hô hấp và bỏ thuốc lá.",
+    "link": "https://vnexpress.net/ho-ra-mau-canh-bao-benh-gi-4860525.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Ho ra máu có thể cảnh báo bệnh gì nguy hiểm?",
+    "answers": [
+      {
+        "text": "Ung thư phổi",
+        "correct": true
+      },
+      {
+        "text": "Cảm cúm",
+        "correct": false
+      },
+      {
+        "text": "Viêm họng",
+        "correct": false
+      },
+      {
+        "text": "Cao huyết áp",
+        "correct": false
+      },
+      {
+        "text": "Đau dạ dày",
         "correct": false
       }
     ]
@@ -4034,33 +4088,6 @@
       },
       {
         "text": "Vì tàu không được bảo hiểm",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Sàn tăng phí, người bán online muốn tăng giá",
-    "content": "Nhiều sàn thương mại điện tử tại Việt Nam sẽ tăng phí từ ngày 1-4, khiến nhiều người bán hàng online có kế hoạch điều chỉnh giá bán. Các tiểu thương cho biết việc tăng phí sẽ ảnh hưởng lớn đến lợi nhuận, buộc họ phải tăng giá sản phẩm để bù đắp chi phí. Tuy nhiên, điều này có thể dẫn đến việc khách hàng giảm mua sắm, gây khó khăn hơn cho các shop nhỏ trong việc duy trì hoạt động.",
-    "link": "https://tuoitre.vn/san-tang-phi-nguoi-ban-online-muon-tang-gia-20250322074542757.htm",
-    "cat": "kinh-doanh",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Việc tăng phí trên sàn thương mại điện tử sẽ ảnh hưởng như thế nào đến người bán hàng online?",
-    "answers": [
-      {
-        "text": "Người bán sẽ phải tăng giá sản phẩm để bù đắp chi phí.",
-        "correct": true
-      },
-      {
-        "text": "Người bán sẽ giảm giá sản phẩm để thu hút khách hàng.",
-        "correct": false
-      },
-      {
-        "text": "Người bán sẽ không thay đổi giá sản phẩm.",
-        "correct": false
-      },
-      {
-        "text": "Người bán sẽ chuyển sang kinh doanh offline.",
         "correct": false
       }
     ]
