--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -166,33 +166,6 @@
     ]
   },
   {
-    "title": "Lợi ích khi ăn các loại hạt buổi sáng",
-    "content": "Ăn các loại hạt vào bữa sáng mang lại nhiều lợi ích cho sức khỏe như cung cấp chất dinh dưỡng, giảm nguy cơ mắc bệnh tim, hỗ trợ tiêu hóa và giúp kiểm soát cân nặng. Các loại hạt như hạt chia, óc chó và hạnh nhân rất giàu chất béo lành mạnh, protein và chất xơ, giúp duy trì năng lượng và cảm giác no lâu. Bữa sáng với các loại hạt còn cung cấp nhiều vitamin và khoáng chất cần thiết cho cơ thể, từ đó góp phần nâng cao sức khỏe tổng thể.",
-    "link": "https://vnexpress.net/loi-ich-khi-an-cac-loai-hat-buoi-sang-4864646.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Lợi ích của việc ăn các loại hạt vào buổi sáng là gì?",
-    "answers": [
-      {
-        "text": "Giảm nguy cơ mắc bệnh tim và hỗ trợ tiêu hóa.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ cung cấp calo mà không có dinh dưỡng.",
-        "correct": false
-      },
-      {
-        "text": "Không có lợi ích gì cho sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Làm tăng cảm giác đói nhanh hơn.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Nguyên nhân khiến trẻ nôn trớ",
     "content": "Trẻ sơ sinh dễ bị nôn trớ do hệ tiêu hóa chưa hoàn thiện, bú quá no hoặc một số bệnh lý đường tiêu hóa. Nôn trớ thường là tình trạng lành tính và có thể tự khỏi khi trẻ lớn hơn. Tuy nhiên, nếu tình trạng này kéo dài kèm theo các dấu hiệu bất thường như chậm tăng cân hay sốt cao, cha mẹ nên đưa trẻ đi khám. Nguyên nhân nôn trớ có thể bao gồm trào ngược dạ dày thực quản, dị ứng sữa hoặc nhiễm trùng tiêu hóa.",
     "link": "https://vnexpress.net/nguyen-nhan-khien-tre-non-tro-4864611.html",
@@ -255,6 +228,33 @@
     ]
   },
   {
+    "title": "Lợi ích khi ăn các loại hạt buổi sáng",
+    "content": "Ăn các loại hạt vào bữa sáng mang lại nhiều lợi ích cho sức khỏe như cung cấp chất dinh dưỡng, giảm nguy cơ mắc bệnh tim, hỗ trợ tiêu hóa và giúp kiểm soát cân nặng. Các loại hạt như hạt chia, óc chó và hạnh nhân rất giàu chất béo lành mạnh, protein và chất xơ, giúp duy trì năng lượng và cảm giác no lâu. Bữa sáng với các loại hạt còn cung cấp nhiều vitamin và khoáng chất cần thiết cho cơ thể, từ đó góp phần nâng cao sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/loi-ich-khi-an-cac-loai-hat-buoi-sang-4864646.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Lợi ích của việc ăn các loại hạt vào buổi sáng là gì?",
+    "answers": [
+      {
+        "text": "Giảm nguy cơ mắc bệnh tim và hỗ trợ tiêu hóa.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ cung cấp calo mà không có dinh dưỡng.",
+        "correct": false
+      },
+      {
+        "text": "Không có lợi ích gì cho sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Làm tăng cảm giác đói nhanh hơn.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "'Pha giao cầu giành HC vàng của Việt Nam không chỉ là may mắn'",
     "content": "Cú giao cầu quyết định của Trần Thị Ngọc Yến trong trận chung kết World Cup cầu mây không chỉ là may mắn, mà còn là kết quả của quá trình rèn luyện và chiến thuật hợp lý. HLV Trần Thị Vui nhấn mạnh rằng áp lực trong tình huống này rất cao, và cú giao cầu thành công đã được chuẩn bị kỹ lưỡng. Đội cầu mây nữ Việt Nam đã xuất sắc vượt qua Thái Lan để giành chức vô địch, đánh dấu lần đầu tiên họ đoạt HC vàng tại giải đấu này.",
     "link": "https://vnexpress.net/pha-giao-cau-gianh-hc-vang-cua-viet-nam-khong-chi-la-may-man-4864638.html",
@@ -277,6 +277,33 @@
       },
       {
         "text": "Có, nhưng cũng có yếu tố kỹ thuật.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Tổng thống Ukraine ra tiền tuyến trước thềm đàm phán hòa bình",
+    "content": "Tổng thống Ukraine Volodymyr Zelensky đã đến thăm khu vực tiền tuyến ở Donbass vào ngày 22/3, nhằm nâng cao tinh thần cho các binh sĩ đang chiến đấu bảo vệ thành phố Pokrovsk. Chuyến thăm diễn ra trước thềm các cuộc đàm phán ngừng bắn giữa Ukraine và Nga dự kiến diễn ra vào ngày 24/2. Zelensky đã trao huy chương cho các đội vận hành máy bay không người lái trong bối cảnh Ukraine đang có dấu hiệu phản công và tìm cách giữ vững vị trí trước các cuộc tấn công của Nga.",
+    "link": "https://dantri.com.vn/the-gioi/tong-thong-ukraine-ra-tien-tuyen-truoc-them-dam-phan-hoa-binh-20250323074002697.htm",
+    "cat": "the-gioi",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Tổng thống Ukraine Zelensky đã làm gì tại khu vực tiền tuyến ở Donbass?",
+    "answers": [
+      {
+        "text": "Thăm và trao huy chương cho các binh sĩ.",
+        "correct": true
+      },
+      {
+        "text": "Ra lệnh tấn công vào các mục tiêu Nga.",
+        "correct": false
+      },
+      {
+        "text": "Tổ chức họp báo với các phóng viên.",
+        "correct": false
+      },
+      {
+        "text": "Đàm phán trực tiếp với Tổng thống Nga.",
         "correct": false
       }
     ]
