Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Bộ Quốc phòng đề xuất cấm người có nồng độ cồn 'lái' drone",
+    "content": "Bộ Quốc phòng đã đề xuất một nghị định mới cấm người điều khiển drone có nồng độ cồn, ma túy hoặc chất gây nghiện trong cơ thể. Quy định này nhằm tạo ra một khuôn khổ pháp lý để quản lý việc sử dụng drone một cách an toàn và hợp lý, đồng thời giảm thiểu các rủi ro liên quan đến an ninh và an toàn bay. Theo đó, người điều khiển drone phải từ 18 tuổi trở lên và không được có các chất cấm trong máu hoặc hơi thở khi tham gia điều khiển phương tiện này.",
+    "link": "https://tuoitre.vn/bo-quoc-phong-de-xuat-cam-nguoi-co-nong-do-con-lai-drone-20250322225705128.htm",
+    "cat": "phap-luat",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Bộ Quốc phòng đã đề xuất điều gì về việc sử dụng drone?",
+    "answers": [
+      {
+        "text": "Cấm người có nồng độ cồn điều khiển drone",
+        "correct": true
+      },
+      {
+        "text": "Cho phép điều khiển drone khi say rượu",
+        "correct": false
+      },
+      {
+        "text": "Không quy định gì về việc điều khiển drone",
+        "correct": false
+      },
+      {
+        "text": "Cấm tất cả các hoạt động liên quan đến drone",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Alvarez đòi sửa luật đá 11m",
     "content": "Julian Alvarez, cầu thủ của Argentina, đã kêu gọi sửa luật đá phạt đền khi anh gặp sự cố trong trận đấu giữa Atletico và Real vào tháng 3. Trong tình huống đá luân lưu, Alvarez trượt chân và bị trọng tài không công nhận bàn thắng do cho rằng anh đã chạm bóng hai lần. Alvarez cho rằng luật này cần được làm rõ hơn và đề nghị không hủy đá phạt đền khi có lỗi nhỏ như vậy, vì điều này ảnh hưởng lớn đến kết quả trận đấu.",
     "link": "https://vnexpress.net/alvarez-doi-sua-luat-da-11m-4864683.html",
@@ -166,6 +193,33 @@
     ]
   },
   {
+    "title": "Lợi ích khi ăn các loại hạt buổi sáng",
+    "content": "Ăn các loại hạt vào bữa sáng mang lại nhiều lợi ích cho sức khỏe như cung cấp chất dinh dưỡng, giảm nguy cơ mắc bệnh tim, hỗ trợ tiêu hóa và giúp kiểm soát cân nặng. Các loại hạt như hạt chia, óc chó và hạnh nhân rất giàu chất béo lành mạnh, protein và chất xơ, giúp duy trì năng lượng và cảm giác no lâu. Bữa sáng với các loại hạt còn cung cấp nhiều vitamin và khoáng chất cần thiết cho cơ thể, từ đó góp phần nâng cao sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/loi-ich-khi-an-cac-loai-hat-buoi-sang-4864646.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Lợi ích của việc ăn các loại hạt vào buổi sáng là gì?",
+    "answers": [
+      {
+        "text": "Giảm nguy cơ mắc bệnh tim và hỗ trợ tiêu hóa.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ cung cấp calo mà không có dinh dưỡng.",
+        "correct": false
+      },
+      {
+        "text": "Không có lợi ích gì cho sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Làm tăng cảm giác đói nhanh hơn.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tranh cãi gay gắt những khóa học dạy làm cha mẹ tốt",
     "content": "Tại Trung Quốc, các khóa học dạy làm cha mẹ đang gây tranh cãi với những khẩu hiệu như \"Cha mẹ sửa mình, không phải sửa con\". Những khóa học này thu hút nhiều phụ huynh đang gặp khó khăn trong việc nuôi dạy con cái. Tuy nhiên, hiệu quả của các khóa học này vẫn là đề tài gây tranh cãi, khi nhiều phụ huynh vẫn chưa thấy được cải thiện trong mối quan hệ với con hoặc tình trạng của con cái. Thêm vào đó, công ty cung cấp khóa học cũng đã bị phạt vì vi phạm quảng cáo.",
     "link": "https://dantri.com.vn/giao-duc/tranh-cai-gay-gat-nhung-khoa-hoc-day-lam-cha-me-tot-20250322150409471.htm",
@@ -192,37 +246,6 @@
       },
       {
         "text": "Chúng hoàn toàn không được ủng hộ bởi xã hội",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bớt bẩm sinh điều trị được không?",
-    "content": "Bớt bẩm sinh thường do tăng sinh tế bào sắc tố, xuất hiện dưới dạng mảng da màu nâu hoặc đen. Hầu hết các bớt này lành tính và không tự mất đi theo thời gian. Để điều trị, các phương pháp như phẫu thuật hoặc laser, đặc biệt là laser pico, có thể được áp dụng, và trẻ từ một tháng tuổi có thể được điều trị. Để đảm bảo an toàn và hiệu quả, nên đưa trẻ đến bác sĩ chuyên khoa da liễu để thăm khám và chọn phương pháp phù hợp.",
-    "link": "https://vnexpress.net/bot-bam-sinh-dieu-tri-duoc-khong-4864665.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Bớt bẩm sinh có thể điều trị bằng phương pháp nào?",
-    "answers": [
-      {
-        "text": "Laser pico",
-        "correct": true
-      },
-      {
-        "text": "Thuốc bôi tại nhà",
-        "correct": false
-      },
-      {
-        "text": "Chườm đá",
-        "correct": false
-      },
-      {
-        "text": "Không có cách nào",
-        "correct": false
-      },
-      {
-        "text": "Phẫu thuật truyền thống",
         "correct": false
       }
     ]
@@ -259,28 +282,32 @@
     ]
   },
   {
-    "title": "Lợi ích khi ăn các loại hạt buổi sáng",
-    "content": "Ăn các loại hạt vào bữa sáng mang lại nhiều lợi ích cho sức khỏe như cung cấp chất dinh dưỡng, giảm nguy cơ mắc bệnh tim, hỗ trợ tiêu hóa và giúp kiểm soát cân nặng. Các loại hạt như hạt chia, óc chó và hạnh nhân rất giàu chất béo lành mạnh, protein và chất xơ, giúp duy trì năng lượng và cảm giác no lâu. Bữa sáng với các loại hạt còn cung cấp nhiều vitamin và khoáng chất cần thiết cho cơ thể, từ đó góp phần nâng cao sức khỏe tổng thể.",
-    "link": "https://vnexpress.net/loi-ich-khi-an-cac-loai-hat-buoi-sang-4864646.html",
+    "title": "Bớt bẩm sinh điều trị được không?",
+    "content": "Bớt bẩm sinh thường do tăng sinh tế bào sắc tố, xuất hiện dưới dạng mảng da màu nâu hoặc đen. Hầu hết các bớt này lành tính và không tự mất đi theo thời gian. Để điều trị, các phương pháp như phẫu thuật hoặc laser, đặc biệt là laser pico, có thể được áp dụng, và trẻ từ một tháng tuổi có thể được điều trị. Để đảm bảo an toàn và hiệu quả, nên đưa trẻ đến bác sĩ chuyên khoa da liễu để thăm khám và chọn phương pháp phù hợp.",
+    "link": "https://vnexpress.net/bot-bam-sinh-dieu-tri-duoc-khong-4864665.html",
     "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Lợi ích của việc ăn các loại hạt vào buổi sáng là gì?",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Bớt bẩm sinh có thể điều trị bằng phương pháp nào?",
     "answers": [
       {
-        "text": "Giảm nguy cơ mắc bệnh tim và hỗ trợ tiêu hóa.",
+        "text": "Laser pico",
         "correct": true
       },
       {
-        "text": "Chỉ cung cấp calo mà không có dinh dưỡng.",
+        "text": "Thuốc bôi tại nhà",
         "correct": false
       },
       {
-        "text": "Không có lợi ích gì cho sức khỏe.",
+        "text": "Chườm đá",
         "correct": false
       },
       {
-        "text": "Làm tăng cảm giác đói nhanh hơn.",
+        "text": "Không có cách nào",
+        "correct": false
+      },
+      {
+        "text": "Phẫu thuật truyền thống",
         "correct": false
       }
     ]
@@ -1794,33 +1821,6 @@
     ]
   },
   {
-    "title": "Thuốc đích, miễn dịch có thay hóa trị ung thư vú được không?",
-    "content": "Bài viết thảo luận về việc liệu liệu pháp thuốc đích và miễn dịch có thể thay thế hóa trị trong điều trị ung thư vú hay không. Theo bác sĩ, thuốc đích và liệu pháp miễn dịch là những phương pháp mới có thể giúp giảm tác dụng phụ so với hóa trị, nhưng chúng không thể hoàn toàn thay thế hóa trị. Việc điều trị sẽ phụ thuộc vào đặc điểm sinh học của từng bệnh nhân và tình trạng bệnh. Tùy thuộc vào từng trường hợp cụ thể, bác sĩ sẽ quyết định phương pháp phù hợp để tối ưu hiệu quả điều trị.",
-    "link": "https://vnexpress.net/thuoc-dich-mien-dich-co-thay-hoa-tri-ung-thu-vu-duoc-khong-4864508.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Liệu pháp thuốc đích và miễn dịch có thể thay thế hóa trị trong điều trị ung thư vú không?",
-    "answers": [
-      {
-        "text": "Không hoàn toàn thay thế",
-        "correct": true
-      },
-      {
-        "text": "Có thể thay thế hoàn toàn",
-        "correct": false
-      },
-      {
-        "text": "Chỉ dùng cho giai đoạn cuối",
-        "correct": false
-      },
-      {
-        "text": "Không áp dụng cho mọi bệnh nhân",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Sinh con đầu lòng ở tuổi 54",
     "content": "Một người phụ nữ 54 tuổi, mắc bệnh lạc nội mạc và có tử cung xơ hóa hoàn toàn, đã mang thai thành công nhờ thụ tinh ống nghiệm (IVF). Tuy nhiên, thai kỳ của bà gặp nhiều biến chứng, dẫn đến ca sinh mổ khó khăn. Các bác sĩ đã phải can thiệp phẫu thuật sâu để đưa em bé ra, và cuối cùng, một bé trai nặng 2,1 kg đã chào đời khỏe mạnh. Hiện tại, sức khỏe của cả mẹ và con đều ổn định, được xem là một kỳ tích trong y học.",
     "link": "https://vnexpress.net/sinh-con-dau-long-o-tuoi-54-4864546.html",
@@ -1843,6 +1843,33 @@
       },
       {
         "text": "Bằng cách nhận con nuôi",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Thuốc đích, miễn dịch có thay hóa trị ung thư vú được không?",
+    "content": "Bài viết thảo luận về việc liệu liệu pháp thuốc đích và miễn dịch có thể thay thế hóa trị trong điều trị ung thư vú hay không. Theo bác sĩ, thuốc đích và liệu pháp miễn dịch là những phương pháp mới có thể giúp giảm tác dụng phụ so với hóa trị, nhưng chúng không thể hoàn toàn thay thế hóa trị. Việc điều trị sẽ phụ thuộc vào đặc điểm sinh học của từng bệnh nhân và tình trạng bệnh. Tùy thuộc vào từng trường hợp cụ thể, bác sĩ sẽ quyết định phương pháp phù hợp để tối ưu hiệu quả điều trị.",
+    "link": "https://vnexpress.net/thuoc-dich-mien-dich-co-thay-hoa-tri-ung-thu-vu-duoc-khong-4864508.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Liệu pháp thuốc đích và miễn dịch có thể thay thế hóa trị trong điều trị ung thư vú không?",
+    "answers": [
+      {
+        "text": "Không hoàn toàn thay thế",
+        "correct": true
+      },
+      {
+        "text": "Có thể thay thế hoàn toàn",
+        "correct": false
+      },
+      {
+        "text": "Chỉ dùng cho giai đoạn cuối",
+        "correct": false
+      },
+      {
+        "text": "Không áp dụng cho mọi bệnh nhân",
         "correct": false
       }
     ]
@@ -3698,33 +3725,6 @@
       },
       {
         "text": "Tham gia thi đấu tại giải vô địch quốc gia",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Nhiễm liên cầu lợn sau ăn tiết canh",
-    "content": "Một người đàn ông 62 tuổi ở Quảng Ninh đã bị nhiễm liên cầu khuẩn lợn sau khi ăn tiết canh lợn tại một quán ăn không rõ nguồn gốc. Hai tuần sau khi ăn, ông xuất hiện triệu chứng như sốt cao, đau bụng và tiêu chảy. Kết quả xét nghiệm cho thấy ông mắc nhiễm khuẩn huyết do liên cầu khuẩn lợn, mặc dù những người cùng ăn không có triệu chứng nhưng vẫn có nguy cơ lây nhiễm. Bệnh có thể tiến triển nhanh chóng và dẫn đến nhiều biến chứng nghiêm trọng nếu không được điều trị kịp thời.",
-    "link": "https://vnexpress.net/nhiem-lien-cau-lon-sau-an-tiet-canh-4864381.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Nguyên nhân nào khiến người đàn ông ở Quảng Ninh nhiễm liên cầu khuẩn lợn?",
-    "answers": [
-      {
-        "text": "Ăn tiết canh lợn tại quán ăn không rõ nguồn gốc.",
-        "correct": true
-      },
-      {
-        "text": "Uống nước không sạch.",
-        "correct": false
-      },
-      {
-        "text": "Ăn nhiều rau sống.",
-        "correct": false
-      },
-      {
-        "text": "Chạm vào lợn bệnh.",
         "correct": false
       }
     ]
